syntax = "proto3";
package rarifyprotocol.rarimocore.rarimocore;

option go_package = "gitlab.com/rarify-protocol/rarimo-core/x/rarimocore/types";

enum type {
  NATIVE = 0;
  ERC20 = 1;
  ERC721 = 2;
  ERC1155 = 3;
  METAPLEX_NFT = 4;
  METAPLEX_FT = 5;
}

message Deposit {
  string tx = 1;
  string eventId = 2;
  string fromChain = 3;
  string toChain = 4;

  bytes receiver = 5;
  bytes tokenAddress = 6;
  bytes tokenId = 7;

  string creator = 8;
  bool signed = 9;
  type tokenType = 10;
}

